# ID_Card

./: CMakeLists.txt  README.md  auto.sh
src/: Image.cpp  Image.hpp  UltraFace.cpp  UltraFace.hpp  main.cpp
